# Software-AutomationStation

./: .gitignore
automationstation/: Cargo.toml
automationstation/src/: main.rs
