[package]
name = "automationstation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashmap = "0.0.1"
postgres = "0.19.7"
powershell_script = "1.1.0"
regex = "1.9.5"
snailquote = "0.3.1"
string = "0.3.0"
urlencoding = "2.1.3"